--- a/notebooks/analysis_viz_part2b.ipynb
+++ b/notebooks/analysis_viz_part2b.ipynb
@@ -785,64 +785,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "def recalculate_round_up(row):\n",
     "    if row['Type'] == 't':\n",
-    "        return 1-stats.t.cdf(row['Stat']+0.1, row['Param1'])\n",
+    "        return 1-stats.t.cdf(row['Stat']+0.01, row['Param1'])\n",
     "    else:\n",
-    "        return 1-stats.f.cdf(row['Stat']+0.1, row['Param1'], row['Param2'])\n",
+    "        return 1-stats.f.cdf(row['Stat']+0.01, row['Param1'], row['Param2'])\n",
     "    \n",
     "def recalculate_round_down(row):\n",
     "    if row['Type'] == 't':\n",
-    "        return 1-stats.t.cdf(row['Stat']-0.1, row['Param1'])\n",
+    "        return 1-stats.t.cdf(row['Stat']-0.01, row['Param1'])\n",
     "    else:\n",
-    "        return 1-stats.f.cdf(row['Stat']-0.1, row['Param1'], row['Param2'])"
+    "        return 1-stats.f.cdf(row['Stat']-0.01, row['Param1'], row['Param2'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-35-cedd26c7be4c>:1: SettingWithCopyWarning: \n",
+      "<ipython-input-52-71d52b0d73e9>:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  close_df['Stat+0.1'] = close_df.apply(lambda x: recalculate_round_up(x), axis=1)\n",
-      "<ipython-input-35-cedd26c7be4c>:2: SettingWithCopyWarning: \n",
+      "  close_df['Stat+0.01'] = close_df.apply(lambda x: recalculate_round_up(x), axis=1)\n",
+      "<ipython-input-52-71d52b0d73e9>:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  close_df['Stat-0.1'] = close_df.apply(lambda x: recalculate_round_down(x), axis=1)\n"
+      "  close_df['Stat-0.01'] = close_df.apply(lambda x: recalculate_round_down(x), axis=1)\n"
      ]
     }
    ],
    "source": [
-    "close_df['Stat+0.1'] = close_df.apply(lambda x: recalculate_round_up(x), axis=1)\n",
-    "close_df['Stat-0.1'] = close_df.apply(lambda x: recalculate_round_down(x), axis=1)"
+    "close_df['Stat+0.01'] = close_df.apply(lambda x: recalculate_round_up(x), axis=1)\n",
+    "close_df['Stat-0.01'] = close_df.apply(lambda x: recalculate_round_down(x), axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(20382, 9)"
+       "(20382, 11)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +869,7 @@
        "(3085, 11)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 61,
    "metadata": {
     "scrolled": true
    },
@@ -916,80 +916,80 @@
        "      <th>Sign</th>\n",
        "      <th>Reported p-value</th>\n",
        "      <th>Recalculated p-value</th>\n",
-       "      <th>Stat+0.1</th>\n",
-       "      <th>Stat-0.1</th>\n",
+       "      <th>Stat+0.01</th>\n",
+       "      <th>Stat-0.01</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>614357009.xml</td>\n",
-       "      <td>F(2, 57) = 3.1, p = .05</td>\n",
-       "      <td>f</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>57</td>\n",
-       "      <td>3.10</td>\n",
-       "      <td>=</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>0.052723</td>\n",
-       "      <td>0.048183</td>\n",
-       "      <td>0.057707</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>351</th>\n",
-       "      <td>614317829.xml</td>\n",
-       "      <td>F(1, 48) = 4.02, p   = .05</td>\n",
+       "      <th>9037</th>\n",
+       "      <td>614328158.xml</td>\n",
+       "      <td>F(1, 88) = 3.94, p   &lt; .05</td>\n",
        "      <td>f</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>48</td>\n",
-       "      <td>4.02</td>\n",
-       "      <td>=</td>\n",
+       "      <td>88</td>\n",
+       "      <td>3.94</td>\n",
+       "      <td>&lt;</td>\n",
        "      <td>0.05</td>\n",
-       "      <td>0.050621</td>\n",
-       "      <td>0.047942</td>\n",
-       "      <td>0.053464</td>\n",
+       "      <td>0.050265</td>\n",
+       "      <td>0.049981</td>\n",
+       "      <td>0.050552</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>586</th>\n",
-       "      <td>614496153.xml</td>\n",
-       "      <td>F(2, 95) = 3.01, p = .05</td>\n",
-       "      <td>f</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>95</td>\n",
-       "      <td>3.01</td>\n",
-       "      <td>=</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>0.054016</td>\n",
-       "      <td>0.049172</td>\n",
-       "      <td>0.059348</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>718</th>\n",
-       "      <td>614307900.xml</td>\n",
-       "      <td>F(1, 39)   = 4.05,  p   &lt; .05</td>\n",
+       "      <th>12052</th>\n",
+       "      <td>614320933.xml</td>\n",
+       "      <td>F(1, 43) = 4.06, p   &lt; .05</td>\n",
        "      <td>f</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>39</td>\n",
+       "      <td>43</td>\n",
+       "      <td>4.06</td>\n",
+       "      <td>&lt;</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.050190</td>\n",
+       "      <td>0.049921</td>\n",
+       "      <td>0.050461</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13444</th>\n",
+       "      <td>614444920.xml</td>\n",
+       "      <td>F(1, 46) = 4.05, p &lt; .05</td>\n",
+       "      <td>f</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>46</td>\n",
        "      <td>4.05</td>\n",
        "      <td>&lt;</td>\n",
        "      <td>0.05</td>\n",
-       "      <td>0.051114</td>\n",
-       "      <td>0.048462</td>\n",
-       "      <td>0.053926</td>\n",
+       "      <td>0.050047</td>\n",
+       "      <td>0.049777</td>\n",
+       "      <td>0.050320</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>784</th>\n",
-       "      <td>1753445757.xml</td>\n",
-       "      <td>F(2, 416) = 2.98, p = .05</td>\n",
+       "      <th>14034</th>\n",
+       "      <td>614378976.xml</td>\n",
+       "      <td>F(2, 136) = 3.06, p &lt;.05</td>\n",
        "      <td>f</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>416</td>\n",
-       "      <td>2.98</td>\n",
-       "      <td>=</td>\n",
+       "      <td>136</td>\n",
+       "      <td>3.06</td>\n",
+       "      <td>&lt;</td>\n",
        "      <td>0.05</td>\n",
-       "      <td>0.051878</td>\n",
-       "      <td>0.047009</td>\n",
-       "      <td>0.057255</td>\n",
+       "      <td>0.050129</td>\n",
+       "      <td>0.049652</td>\n",
+       "      <td>0.050611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14184</th>\n",
+       "      <td>614492272.xml</td>\n",
+       "      <td>F(1, 37) = 4.1, p   &lt; .05</td>\n",
+       "      <td>f</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>37</td>\n",
+       "      <td>4.10</td>\n",
+       "      <td>&lt;</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.050145</td>\n",
+       "      <td>0.049880</td>\n",
+       "      <td>0.050411</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1006,117 +1006,117 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>197100</th>\n",
-       "      <td>1685750389.xml</td>\n",
-       "      <td>F(1, 114) = 3.88, p = .05</td>\n",
+       "      <th>177545</th>\n",
+       "      <td>614313796.xml</td>\n",
+       "      <td>F(1, 16) = 4.49, p &lt; .05</td>\n",
        "      <td>f</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>114</td>\n",
-       "      <td>3.88</td>\n",
-       "      <td>=</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>0.051290</td>\n",
-       "      <td>0.048429</td>\n",
-       "      <td>0.054333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>197244</th>\n",
-       "      <td>614332498.xml</td>\n",
-       "      <td>F(4, 212) = 2.37, p = .05</td>\n",
-       "      <td>f</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>212</td>\n",
-       "      <td>2.37</td>\n",
-       "      <td>=</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>0.053632</td>\n",
-       "      <td>0.045759</td>\n",
-       "      <td>0.062806</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>197388</th>\n",
-       "      <td>614404428.xml</td>\n",
-       "      <td>F(2, 27) = 3.33, p &lt; .05</td>\n",
-       "      <td>f</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>27</td>\n",
-       "      <td>3.33</td>\n",
+       "      <td>16</td>\n",
+       "      <td>4.49</td>\n",
        "      <td>&lt;</td>\n",
        "      <td>0.05</td>\n",
-       "      <td>0.050977</td>\n",
-       "      <td>0.047058</td>\n",
-       "      <td>0.055247</td>\n",
+       "      <td>0.050090</td>\n",
+       "      <td>0.049865</td>\n",
+       "      <td>0.050317</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>197588</th>\n",
-       "      <td>614320914.xml</td>\n",
-       "      <td>F(2, 80) = 3.02, p   = .05</td>\n",
-       "      <td>f</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>80</td>\n",
-       "      <td>3.02</td>\n",
-       "      <td>=</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>0.054398</td>\n",
-       "      <td>0.049573</td>\n",
-       "      <td>0.059705</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>197719</th>\n",
-       "      <td>614298851.xml</td>\n",
-       "      <td>F(1, 154) = 3.87, p &lt; .05</td>\n",
+       "      <th>182983</th>\n",
+       "      <td>614322001.xml</td>\n",
+       "      <td>F(1, 61) = 3.99, p &lt; .05</td>\n",
        "      <td>f</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>154</td>\n",
-       "      <td>3.87</td>\n",
+       "      <td>61</td>\n",
+       "      <td>3.99</td>\n",
        "      <td>&lt;</td>\n",
        "      <td>0.05</td>\n",
-       "      <td>0.050953</td>\n",
-       "      <td>0.048085</td>\n",
-       "      <td>0.054005</td>\n",
+       "      <td>0.050236</td>\n",
+       "      <td>0.049958</td>\n",
+       "      <td>0.050516</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188443</th>\n",
+       "      <td>614383935.xml</td>\n",
+       "      <td>F(1, 86) = 3.95, p &lt; .05</td>\n",
+       "      <td>f</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>86</td>\n",
+       "      <td>3.95</td>\n",
+       "      <td>&lt;</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.050053</td>\n",
+       "      <td>0.049770</td>\n",
+       "      <td>0.050338</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>192300</th>\n",
+       "      <td>614327155.xml</td>\n",
+       "      <td>F(1, 13) = 4.66, p &lt; .05</td>\n",
+       "      <td>f</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>4.66</td>\n",
+       "      <td>&lt;</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.050152</td>\n",
+       "      <td>0.049941</td>\n",
+       "      <td>0.050365</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197075</th>\n",
+       "      <td>614395996.xml</td>\n",
+       "      <td>F(1, 33) = 4.13, p &lt;.05</td>\n",
+       "      <td>f</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>33</td>\n",
+       "      <td>4.13</td>\n",
+       "      <td>&lt;</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.050242</td>\n",
+       "      <td>0.049980</td>\n",
+       "      <td>0.050505</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1048 rows × 11 columns</p>\n",
+       "<p>91 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  File                       Original Type  Param1 Param2  \\\n",
-       "25       614357009.xml        F(2, 57) = 3.1, p = .05    f     2.0     57   \n",
-       "351      614317829.xml     F(1, 48) = 4.02, p   = .05    f     1.0     48   \n",
-       "586      614496153.xml       F(2, 95) = 3.01, p = .05    f     2.0     95   \n",
-       "718      614307900.xml  F(1, 39)   = 4.05,  p   < .05    f     1.0     39   \n",
-       "784     1753445757.xml      F(2, 416) = 2.98, p = .05    f     2.0    416   \n",
-       "...                ...                            ...  ...     ...    ...   \n",
-       "197100  1685750389.xml      F(1, 114) = 3.88, p = .05    f     1.0    114   \n",
-       "197244   614332498.xml      F(4, 212) = 2.37, p = .05    f     4.0    212   \n",
-       "197388   614404428.xml       F(2, 27) = 3.33, p < .05    f     2.0     27   \n",
-       "197588   614320914.xml     F(2, 80) = 3.02, p   = .05    f     2.0     80   \n",
-       "197719   614298851.xml      F(1, 154) = 3.87, p < .05    f     1.0    154   \n",
+       "                 File                    Original Type  Param1 Param2  Stat  \\\n",
+       "9037    614328158.xml  F(1, 88) = 3.94, p   < .05    f     1.0     88  3.94   \n",
+       "12052   614320933.xml  F(1, 43) = 4.06, p   < .05    f     1.0     43  4.06   \n",
+       "13444   614444920.xml    F(1, 46) = 4.05, p < .05    f     1.0     46  4.05   \n",
+       "14034   614378976.xml    F(2, 136) = 3.06, p <.05    f     2.0    136  3.06   \n",
+       "14184   614492272.xml   F(1, 37) = 4.1, p   < .05    f     1.0     37  4.10   \n",
+       "...               ...                         ...  ...     ...    ...   ...   \n",
+       "177545  614313796.xml    F(1, 16) = 4.49, p < .05    f     1.0     16  4.49   \n",
+       "182983  614322001.xml    F(1, 61) = 3.99, p < .05    f     1.0     61  3.99   \n",
+       "188443  614383935.xml    F(1, 86) = 3.95, p < .05    f     1.0     86  3.95   \n",
+       "192300  614327155.xml    F(1, 13) = 4.66, p < .05    f     1.0     13  4.66   \n",
+       "197075  614395996.xml     F(1, 33) = 4.13, p <.05    f     1.0     33  4.13   \n",
        "\n",
-       "        Stat Sign  Reported p-value  Recalculated p-value  Stat+0.1  Stat-0.1  \n",
-       "25      3.10    =              0.05              0.052723  0.048183  0.057707  \n",
-       "351     4.02    =              0.05              0.050621  0.047942  0.053464  \n",
-       "586     3.01    =              0.05              0.054016  0.049172  0.059348  \n",
-       "718     4.05    <              0.05              0.051114  0.048462  0.053926  \n",
-       "784     2.98    =              0.05              0.051878  0.047009  0.057255  \n",
-       "...      ...  ...               ...                   ...       ...       ...  \n",
-       "197100  3.88    =              0.05              0.051290  0.048429  0.054333  \n",
-       "197244  2.37    =              0.05              0.053632  0.045759  0.062806  \n",
-       "197388  3.33    <              0.05              0.050977  0.047058  0.055247  \n",
-       "197588  3.02    =              0.05              0.054398  0.049573  0.059705  \n",
-       "197719  3.87    <              0.05              0.050953  0.048085  0.054005  \n",
+       "       Sign  Reported p-value  Recalculated p-value  Stat+0.01  Stat-0.01  \n",
+       "9037      <              0.05              0.050265   0.049981   0.050552  \n",
+       "12052     <              0.05              0.050190   0.049921   0.050461  \n",
+       "13444     <              0.05              0.050047   0.049777   0.050320  \n",
+       "14034     <              0.05              0.050129   0.049652   0.050611  \n",
+       "14184     <              0.05              0.050145   0.049880   0.050411  \n",
+       "...     ...               ...                   ...        ...        ...  \n",
+       "177545    <              0.05              0.050090   0.049865   0.050317  \n",
+       "182983    <              0.05              0.050236   0.049958   0.050516  \n",
+       "188443    <              0.05              0.050053   0.049770   0.050338  \n",
+       "192300    <              0.05              0.050152   0.049941   0.050365  \n",
+       "197075    <              0.05              0.050242   0.049980   0.050505  \n",
        "\n",
-       "[1048 rows x 11 columns]"
+       "[91 rows x 11 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mismatch_df[(mismatch_df['Stat+0.1'] < 0.05) | (mismatch_df['Stat-0.1'] < 0.05)]"
+    "mismatch_df[(mismatch_df['Sign'] == '<') & (mismatch_df['Stat+0.01'] < 0.05)]"
    ]
   },
   {
@@ -1132,6 +1132,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
