--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "614304222.xml           []  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "Name: P-Values-SN, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,19 +305,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.7/site-packages/ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
+      "/var/folders/fn/xf0z8q6n6_56qf265zs37k100000gr/T/ipykernel_79861/1786062769.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  after removing the cwd from sys.path.\n"
+      "  corpus1['P-Values'] = corpus1['P-Values'].apply(eval)\n"
      ]
     }
    ],
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
        "614337945.xml    < .01  1987"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
        "614340287.xml   Journal of Applied Psychology    39.0     5  348-353  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +700,7 @@
        "      <td>27.0</td>\n",
        "      <td>Journal of Personality and Social Psychology</td>\n",
        "      <td>52.0</td>\n",
-       "      <td>3</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>620-625</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -715,7 +715,7 @@
        "      <td>90.0</td>\n",
        "      <td>Journal of Personality and Social Psychology</td>\n",
        "      <td>108.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>93-113</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -730,7 +730,7 @@
        "      <td>38.0</td>\n",
        "      <td>Journal of Personality and Social Psychology</td>\n",
        "      <td>83.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>126-137</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -745,7 +745,7 @@
        "      <td>72.0</td>\n",
        "      <td>Journal of Personality and Social Psychology</td>\n",
        "      <td>73.0</td>\n",
-       "      <td>5</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>1052-1063</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -760,7 +760,7 @@
        "      <td>42.0</td>\n",
        "      <td>Journal of Personality and Social Psychology</td>\n",
        "      <td>59.0</td>\n",
-       "      <td>5</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>994-1005</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -804,11 +804,11 @@
        "614304222.xml                                 ['Empirical Study']        42.0   \n",
        "\n",
        "                                                     Journal  Volume Issue  \\\n",
-       "614337945.xml   Journal of Personality and Social Psychology    52.0     3   \n",
-       "1647028895.xml  Journal of Personality and Social Psychology   108.0     1   \n",
-       "614404963.xml   Journal of Personality and Social Psychology    83.0     1   \n",
-       "614332724.xml   Journal of Personality and Social Psychology    73.0     5   \n",
-       "614304222.xml   Journal of Personality and Social Psychology    59.0     5   \n",
+       "614337945.xml   Journal of Personality and Social Psychology    52.0   3.0   \n",
+       "1647028895.xml  Journal of Personality and Social Psychology   108.0   1.0   \n",
+       "614404963.xml   Journal of Personality and Social Psychology    83.0   1.0   \n",
+       "614332724.xml   Journal of Personality and Social Psychology    73.0   5.0   \n",
+       "614304222.xml   Journal of Personality and Social Psychology    59.0   5.0   \n",
        "\n",
        "                    Pages  \n",
        "614337945.xml     620-625  \n",
@@ -818,7 +818,7 @@
        "614304222.xml    994-1005  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -972,13 +972,34 @@
        "614304222.xml           []          []  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "corpus1_stat.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]    6048\n",
+       "Name: F_stats_SN, dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corpus1_stat['F_stats_SN'].value_counts()"
    ]
   },
   {
@@ -990,31 +1011,10 @@
      "data": {
       "text/plain": [
        "[]    6048\n",
-       "Name: F_stats_SN, dtype: int64"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "corpus1_stat['F_stats_SN'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]    6048\n",
        "Name: t_scores_SN, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1116,7 @@
        "614323566.xml       []         []         []       []          []          []"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1138,7 +1138,7 @@
        "Name: F_stats_SN, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1149,19 +1149,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[]                                          21039\n",
-       "['= 1.05e−03', '= 3.2e−03', '= 3.4e−03']        1\n",
        "['= 2.2e-16', '= 2.2e-16']                      1\n",
+       "['= 1.05e−03', '= 3.2e−03', '= 3.4e−03']        1\n",
        "Name: t_scores_SN, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1196,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1282,7 +1282,7 @@
        "614304222.xml                                                  []          []  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1301,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1328,22 +1328,23 @@
     "    Returns: df1, df2, x, p\n",
     "    \"\"\"\n",
     "    extract = re.findall(\n",
-    "        r'Fs?\\s*\\(\\s*(\\d+)\\s*\\,\\s*(\\d+)\\s*\\)\\s*[\\<|\\>|\\=]\\s*(\\d*\\.?\\d*)\\s*\\,\\s*p\\s*([\\<|\\>|\\=])\\s*(\\d*\\.\\d+)',\n",
+    "        r'Fs?\\s*\\(\\s*(\\d+)\\s*\\,\\s*(\\d+)\\s*\\)\\s*([\\<|\\>|\\=])\\s*(\\d*\\.?\\d*)\\s*\\,\\s*p\\s*([\\<|\\>|\\=])\\s*(\\d*\\.\\d+)',\n",
     "        s)[0]    \n",
     "    \n",
     "    df1 = float(extract[0])\n",
     "    df2 = float(extract[1])\n",
     "    \n",
-    "    x = float(extract[2])\n",
-    "    ineq = extract[3]\n",
-    "    p = float(extract[4])\n",
+    "    stat_ineq = extract[2]\n",
+    "    x = float(extract[3])\n",
+    "    p_ineq = extract[4]\n",
+    "    p = float(extract[5])\n",
     "    \n",
-    "    return df1, df2, x, ineq, p"
+    "    return df1, df2, stat_ineq, x, p_ineq, p"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1356,20 +1357,21 @@
     "    \n",
     "    s = re.sub(r'−\\s*', \"-\", s)\n",
     "    extract = re.findall(\n",
-    "        r't\\s*\\((\\s*\\d*\\s*,)?\\s*(\\d+)\\s*\\)\\s*[\\<|\\>|\\=]\\s*([\\−|\\-]?\\s*\\d*\\.?\\d*)\\s*,\\s*p\\s*([\\<|\\>|\\=])\\s*(\\d?\\.\\d+)',\n",
+    "        r't\\s*\\((\\s*\\d*\\s*,)?\\s*(\\d+)\\s*\\)\\s*([\\<|\\>|\\=])\\s*([\\−|\\-]?\\s*\\d*\\.?\\d*)\\s*,\\s*p\\s*([\\<|\\>|\\=])\\s*(\\d?\\.\\d+)',\n",
     "        s)[0]\n",
     "    \n",
     "    df = float(extract[1])\n",
-    "    x = float(extract[2].replace(\" \", \"\"))\n",
-    "    ineq = extract[3]\n",
-    "    p = float(extract[4])\n",
+    "    stat_ineq = extract[2]\n",
+    "    x = float(extract[3].replace(\" \", \"\"))\n",
+    "    p_ineq = extract[4]\n",
+    "    p = float(extract[5])\n",
     "    \n",
-    "    return df, x, ineq, p"
+    "    return df, stat_ineq, x, p_ineq, p"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1378,14 +1380,15 @@
     "    return {'File': index, \n",
     "            'Original': s, \n",
     "            'Type': test_type,\n",
-    "            'Sign': ex[3],\n",
-    "            'Reported p-value': ex[4], \n",
-    "            'Recalculated p-value': 1-stats.f.cdf(ex[2], ex[0], ex[1])}"
+    "            'stat-Sign': ex[2],\n",
+    "            'p-Sign': ex[4],\n",
+    "            'Reported p-value': ex[5], \n",
+    "            'Recalculated p-value': 1-stats.f.cdf(ex[3], ex[0], ex[1])}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1393,10 +1396,11 @@
     "    ex = extract_t(s)\n",
     "    return {'File': index, \n",
     "            'Original': s, \n",
-    "            'Type': test_type, \n",
-    "            'Sign': ex[2],\n",
-    "            'Reported p-value': ex[3], \n",
-    "            'Recalculated p-value': 1-stats.t.cdf(ex[1], ex[0])}"
+    "            'Type': test_type,\n",
+    "            'stat-Sign': ex[1],\n",
+    "            'Sign': ex[3],\n",
+    "            'Reported p-value': ex[4], \n",
+    "            'Recalculated p-value': 1-stats.t.cdf(ex[2], ex[0])}"
    ]
   },
   {
@@ -1408,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1425,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -1454,131 +1458,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>File</th>\n",
-       "      <th>Original</th>\n",
-       "      <th>Type</th>\n",
-       "      <th>Sign</th>\n",
-       "      <th>Reported p-value</th>\n",
-       "      <th>Recalculated p-value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>614337945.xml</td>\n",
-       "      <td>t   (41)   = 4.10,    p   &lt; .01</td>\n",
-       "      <td>t</td>\n",
-       "      <td>&lt;</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>9.531027e-05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>614337945.xml</td>\n",
-       "      <td>t   (41)   = −3.56,    p   &lt; .01</td>\n",
-       "      <td>t</td>\n",
-       "      <td>&lt;</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>9.995224e-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>614337945.xml</td>\n",
-       "      <td>t   (41)   = 8.21,    p   &lt; .01</td>\n",
-       "      <td>t</td>\n",
-       "      <td>&lt;</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>1.708961e-10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>614337945.xml</td>\n",
-       "      <td>t   (41)   = 4.82,    p   &lt; .01</td>\n",
-       "      <td>t</td>\n",
-       "      <td>&lt;</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>9.987600e-06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>614337945.xml</td>\n",
-       "      <td>t   (41)   = −2.57,    p   &lt; .01</td>\n",
-       "      <td>t</td>\n",
-       "      <td>&lt;</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>9.930493e-01</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            File                          Original Type Sign  \\\n",
-       "0  614337945.xml   t   (41)   = 4.10,    p   < .01    t    <   \n",
-       "1  614337945.xml  t   (41)   = −3.56,    p   < .01    t    <   \n",
-       "2  614337945.xml   t   (41)   = 8.21,    p   < .01    t    <   \n",
-       "3  614337945.xml   t   (41)   = 4.82,    p   < .01    t    <   \n",
-       "4  614337945.xml  t   (41)   = −2.57,    p   < .01    t    <   \n",
-       "\n",
-       "   Reported p-value  Recalculated p-value  \n",
-       "0              0.01          9.531027e-05  \n",
-       "1              0.01          9.995224e-01  \n",
-       "2              0.01          1.708961e-10  \n",
-       "3              0.01          9.987600e-06  \n",
-       "4              0.01          9.930493e-01  "
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_stats.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(212589, 6)"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_stats.shape"
    ]
@@ -1609,7 +1502,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1623,7 +1516,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
